--- a/app/src/main/res/layout/h_list_layout.xml
+++ b/app/src/main/res/layout/h_list_layout.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
+<com.google.android.material.card.MaterialCardView
+    android:id="@+id/container"
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="160dp"
     android:layout_height="270dp"
     xmlns:app="http://schemas.android.com/apk/res-auto"
