--- a/app/src/main/res/layout/h_list_layout_2.xml
+++ b/app/src/main/res/layout/h_list_layout_2.xml
@@ -1,43 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.google.android.material.card.MaterialCardView
+<androidx.cardview.widget.CardView
     android:id="@+id/container"
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="100dp"
     android:layout_height="190dp"
+    android:layout_margin="4dp"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_marginHorizontal="8dp"
     app:cardCornerRadius="20dp"
     app:strokeWidth="0dp">
 
-    <LinearLayout
+    <ImageView
+        android:id="@+id/iv_poster"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:contentDescription="@string/poster" />
 
-        <com.google.android.material.card.MaterialCardView
-            android:layout_width="match_parent"
-            android:layout_height="160dp"
-            app:cardCornerRadius="20dp"
-            app:strokeWidth="0dp">
-
-            <ImageView
-                android:id="@+id/iv_poster"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:contentDescription="@string/poster" />
-        </com.google.android.material.card.MaterialCardView>
-
-        <TextView
-            android:id="@+id/tv_title"
-            android:layout_width="match_parent"
-            android:layout_height="30dp"
-            android:layout_marginHorizontal="4dp"
-            android:maxLines="1"
-            android:ellipsize="end"
-            android:gravity="center"
-            android:textStyle="bold"
-            android:text="@string/title"
-            android:textColor="@color/black" />
-    </LinearLayout>
-
-</com.google.android.material.card.MaterialCardView>
+</androidx.cardview.widget.CardView>
