--- a/app/src/main/res/layout/cast_layout.xml
+++ b/app/src/main/res/layout/cast_layout.xml
@@ -2,12 +2,12 @@
 <androidx.cardview.widget.CardView
     android:id="@+id/container"
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="100dp"
-    android:layout_height="190dp"
+    android:layout_width="140dp"
+    android:layout_height="180dp"
     android:layout_marginVertical="4dp"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_marginHorizontal="8dp"
-    app:cardCornerRadius="8dp"
+    app:cardCornerRadius="16dp"
     app:strokeWidth="0dp">
 
     <LinearLayout
@@ -17,7 +17,7 @@
 
         <androidx.cardview.widget.CardView
             android:layout_width="match_parent"
-            android:layout_height="120dp"
+            android:layout_height="130dp"
             app:cardElevation="0dp"
             app:cardCornerRadius="8dp"
             app:strokeWidth="0dp">
@@ -26,6 +26,8 @@
                 android:id="@+id/iv_portrait"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:src="@drawable/profile_placeholder"
+                android:scaleType="centerCrop"
                 android:contentDescription="@string/poster" />
         </androidx.cardview.widget.CardView>
 
@@ -33,9 +35,10 @@
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="1"
-            android:layout_margin="2dp"
+            android:layout_marginVertical="4dp"
+            android:layout_marginHorizontal="8dp"
             android:orientation="vertical"
-            android:gravity="center_vertical">
+            android:gravity="center_horizontal">
 
             <TextView
                 android:id="@+id/tv_name"
@@ -45,6 +48,8 @@
                 android:textSize="12sp"
                 android:textStyle="bold"
                 android:text="@string/name"
+                android:maxLines="2"
+                android:ellipsize="end"
                 android:textColor="@color/black" />
             <TextView
                 android:id="@+id/tv_character"
@@ -52,6 +57,8 @@
                 android:layout_height="wrap_content"
                 android:gravity="center"
                 android:textSize="11sp"
+                android:maxLines="2"
+                android:ellipsize="end"
                 android:text="@string/title"
                 android:textColor="@color/black" />
 
