--- a/app/src/main/res/layout/favorite_layout.xml
+++ b/app/src/main/res/layout/favorite_layout.xml
@@ -35,47 +35,25 @@
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:layout_marginHorizontal="12dp"
+            android:gravity="center_vertical"
             android:orientation="vertical">
+
+            <ImageView
+                android:id="@+id/iv_type"
+                android:layout_width="24dp"
+                android:layout_height="24dp"
+                android:src="@drawable/movie"
+                app:tint="@color/dark_blue" />
 
             <TextView
                 android:id="@+id/tv_title"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="@string/title"
-                android:textColor="@color/black"
+                android:textColor="@color/dark_blue"
                 android:textSize="16sp"
                 android:textStyle="bold"
                 android:layout_marginBottom="2dp"/>
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:layout_marginBottom="2dp">
-                <androidx.cardview.widget.CardView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_margin="2dp"
-                    app:cardCornerRadius="6dp">
-
-                    <TextView
-                        android:id="@+id/tv_adult"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginHorizontal="3dp"
-                        android:text="@string/_18"
-                        android:textSize="11sp" />
-                </androidx.cardview.widget.CardView>
-            </LinearLayout>
-
-            <RatingBar
-                android:id="@+id/rating_bar"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                style="@style/Widget.AppCompat.RatingBar.Small"
-                android:progressTint="@color/orange"
-                android:numStars="5"
-                android:stepSize="0.5"/>
 
         </LinearLayout>
 
