--- a/app/src/main/res/layout/h_list_layout.xml
+++ b/app/src/main/res/layout/h_list_layout.xml
@@ -2,9 +2,9 @@
 <com.google.android.material.card.MaterialCardView
     android:id="@+id/container"
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="160dp"
     android:layout_height="270dp"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_marginHorizontal="8dp"
     app:cardCornerRadius="20dp"
     app:strokeWidth="0dp">
@@ -24,6 +24,8 @@
                 android:id="@+id/iv_poster"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:src="@drawable/image_placeholder"
+                android:scaleType="centerCrop"
                 android:contentDescription="@string/poster" />
         </com.google.android.material.card.MaterialCardView>
 
