--- a/app/src/main/res/layout/h_list_layout_2.xml
+++ b/app/src/main/res/layout/h_list_layout_2.xml
@@ -2,8 +2,8 @@
 <androidx.cardview.widget.CardView
     android:id="@+id/container"
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="100dp"
-    android:layout_height="190dp"
+    android:layout_width="120dp"
+    android:layout_height="180dp"
     android:layout_margin="4dp"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_marginHorizontal="8dp"
@@ -14,6 +14,8 @@
         android:id="@+id/iv_poster"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:src="@drawable/image_placeholder"
+        android:scaleType="centerCrop"
         android:contentDescription="@string/poster" />
 
 </androidx.cardview.widget.CardView>
