--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -10,13 +10,14 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/white"
+        android:background="@color/black"
         android:elevation="0dp"
         android:orientation="vertical">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:background="@color/black"
             android:elevation="0dp"
             android:gravity="center"
             android:layout_marginBottom="20dp"
@@ -44,6 +45,8 @@
                         android:id="@+id/iv_poster"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
+                        android:src="@drawable/image_placeholder"
+                        android:scaleType="centerCrop"
                         android:contentDescription="@string/poster" />
 
                 </androidx.cardview.widget.CardView>
@@ -62,6 +65,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_alignParentBottom="true"
+                    android:backgroundTint="@color/black"
                     app:cardElevation="0dp"
                     app:cardCornerRadius="20dp"
                     app:strokeWidth="0dp">
@@ -81,12 +85,13 @@
                             android:layout_height="wrap_content"
                             android:layout_marginBottom="2dp"
                             android:text="@string/title"
-                            android:textColor="@color/black"
+                            android:textColor="@color/white"
                             android:textSize="16sp"
                             android:textStyle="bold" />
 
                         <TextView
                             android:id="@+id/tv_genre"
+                            android:textColor="@color/white"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_marginBottom="2dp"
@@ -96,19 +101,20 @@
                         <LinearLayout
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:layout_marginBottom="2dp"
+                            android:layout_marginVertical="2dp"
                             android:orientation="horizontal">
 
                             <androidx.cardview.widget.CardView
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
-                                android:layout_margin="2dp"
+                                android:backgroundTint="@color/black_2"
                                 app:cardCornerRadius="6dp">
 
                                 <TextView
                                     android:id="@+id/tv_adult"
                                     android:layout_width="match_parent"
                                     android:layout_height="wrap_content"
+                                    android:textColor="@color/white"
                                     android:layout_marginHorizontal="3dp"
                                     android:text="@string/_18"
                                     android:textSize="11sp" />
@@ -118,6 +124,7 @@
                                 android:id="@+id/tv_duration"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
+                                android:textColor="@color/white"
                                 android:layout_marginStart="4dp"
                                 android:text="@string/duration"
                                 android:textSize="11sp" />
@@ -142,6 +149,7 @@
             <androidx.cardview.widget.CardView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:backgroundTint="@color/black"
                 android:layout_marginHorizontal="20dp"
                 android:layout_marginBottom="4dp"
                 app:cardCornerRadius="12dp"
@@ -235,6 +243,7 @@
                 android:layout_width="50dp"
                 android:layout_height="50dp"
                 android:src="@drawable/refresh"
+                app:tint="@color/white"
                 android:contentDescription="@string/refresh" />
 
         </LinearLayout>
