--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -46,7 +46,9 @@
                 android:id="@+id/iv_refresh"
                 android:layout_width="50dp"
                 android:layout_height="50dp"
-                android:src="@drawable/refresh"/>
+                android:src="@drawable/refresh"
+                android:contentDescription="@string/refresh"
+                app:tint="@color/white" />
 
         </LinearLayout>
 
@@ -55,7 +57,8 @@
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/bottom_navigation"
         android:layout_width="match_parent"
-        android:layout_height="75dp"
+        android:layout_height="wrap_content"
+        app:itemIconTint="@color/white"
         app:menu="@menu/bottom_nav_menu"/>
 
 </LinearLayout>
