--- a/app/src/main/res/layout/cast_layout.xml
+++ b/app/src/main/res/layout/cast_layout.xml
@@ -4,6 +4,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="140dp"
     android:layout_height="180dp"
+    android:backgroundTint="@color/black_2"
     android:layout_marginVertical="4dp"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_marginHorizontal="8dp"
@@ -18,8 +19,8 @@
         <androidx.cardview.widget.CardView
             android:layout_width="match_parent"
             android:layout_height="130dp"
+            app:cardCornerRadius="16dp"
             app:cardElevation="0dp"
-            app:cardCornerRadius="8dp"
             app:strokeWidth="0dp">
 
             <ImageView
@@ -50,7 +51,7 @@
                 android:text="@string/name"
                 android:maxLines="2"
                 android:ellipsize="end"
-                android:textColor="@color/black" />
+                android:textColor="@color/white" />
             <TextView
                 android:id="@+id/tv_character"
                 android:layout_width="match_parent"
@@ -60,7 +61,7 @@
                 android:maxLines="2"
                 android:ellipsize="end"
                 android:text="@string/title"
-                android:textColor="@color/black" />
+                android:textColor="@color/white" />
 
         </LinearLayout>
 
