--- a/app/src/main/res/layout/favorite_layout.xml
+++ b/app/src/main/res/layout/favorite_layout.xml
@@ -5,6 +5,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="140dp"
+    android:backgroundTint="@color/black_2"
     android:layout_marginHorizontal="8dp"
     android:layout_marginVertical="6dp"
     app:cardCornerRadius="12dp"
@@ -43,14 +44,15 @@
                 android:layout_width="24dp"
                 android:layout_height="24dp"
                 android:src="@drawable/movie"
-                app:tint="@color/dark_blue" />
+                app:tint="@color/white"
+                android:contentDescription="@string/movies" />
 
             <TextView
                 android:id="@+id/tv_title"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="@string/title"
-                android:textColor="@color/dark_blue"
+                android:textColor="@color/white"
                 android:textSize="16sp"
                 android:textStyle="bold"
                 android:layout_marginBottom="2dp"/>
