--- a/app/src/main/res/layout/fragment_tv_shows.xml
+++ b/app/src/main/res/layout/fragment_tv_shows.xml
@@ -28,7 +28,7 @@
                     android:layout_weight="1"
                     android:textStyle="bold"
                     android:textSize="16sp"
-                    android:textColor="@color/black"
+                    android:textColor="@color/white"
                     android:layout_height="wrap_content"
                     android:text="@string/airing_today"/>
                 <TextView
@@ -36,9 +36,10 @@
                     android:layout_width="62dp"
                     android:layout_height="wrap_content"
                     android:textSize="11sp"
-                    android:textColor="@color/black"
+                    android:textColor="@color/white"
                     android:text="@string/show_all"
-                    app:drawableRightCompat="@drawable/arrow_right"/>
+                    app:drawableRightCompat="@drawable/arrow_right"
+                    app:drawableTint="@color/white" />
             </LinearLayout>
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/rv_airing_today"
@@ -71,7 +72,7 @@
                     android:layout_weight="1"
                     android:textStyle="bold"
                     android:textSize="16sp"
-                    android:textColor="@color/black"
+                    android:textColor="@color/white"
                     android:layout_height="wrap_content"
                     android:text="@string/on_the_air"/>
                 <TextView
@@ -79,9 +80,10 @@
                     android:layout_width="62dp"
                     android:layout_height="wrap_content"
                     android:textSize="11sp"
-                    android:textColor="@color/black"
+                    android:textColor="@color/white"
                     android:text="@string/show_all"
-                    app:drawableRightCompat="@drawable/arrow_right"/>
+                    app:drawableRightCompat="@drawable/arrow_right"
+                    app:drawableTint="@color/white" />
             </LinearLayout>
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/rv_on_the_air"
@@ -115,7 +117,7 @@
                     android:layout_weight="1"
                     android:textStyle="bold"
                     android:textSize="16sp"
-                    android:textColor="@color/black"
+                    android:textColor="@color/white"
                     android:layout_height="wrap_content"
                     android:text="@string/popular_tv_shows"/>
                 <TextView
@@ -123,9 +125,10 @@
                     android:layout_width="62dp"
                     android:layout_height="wrap_content"
                     android:textSize="11sp"
-                    android:textColor="@color/black"
+                    android:textColor="@color/white"
                     android:text="@string/show_all"
-                    app:drawableRightCompat="@drawable/arrow_right"/>
+                    app:drawableRightCompat="@drawable/arrow_right"
+                    app:drawableTint="@color/white" />
             </LinearLayout>
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/rv_popular"
@@ -158,17 +161,19 @@
                     android:layout_weight="1"
                     android:textStyle="bold"
                     android:textSize="16sp"
-                    android:textColor="@color/black"
+                    android:textColor="@color/white"
                     android:layout_height="wrap_content"
-                    android:text="@string/top_rated_tv_shows"/>
+                    android:text="@string/top_rated_tv_shows"
+                    app:drawableTint="@color/white" />
                 <TextView
                     android:id="@+id/tv_show_all_top_rated"
                     android:layout_width="62dp"
                     android:layout_height="wrap_content"
                     android:textSize="11sp"
-                    android:textColor="@color/black"
+                    android:textColor="@color/white"
                     android:text="@string/show_all"
-                    app:drawableRightCompat="@drawable/arrow_right"/>
+                    app:drawableRightCompat="@drawable/arrow_right"
+                    app:drawableTint="@color/white" />
             </LinearLayout>
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/rv_top_rated"
