--- a/app/src/main/res/layout/h_list_layout.xml
+++ b/app/src/main/res/layout/h_list_layout.xml
@@ -39,7 +39,7 @@
             android:gravity="center"
             android:text="@string/title"
             android:textStyle="bold"
-            android:textColor="@color/black" />
+            android:textColor="@color/white" />
     </LinearLayout>
 
 </com.google.android.material.card.MaterialCardView>
