--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="black">#1A1A1A</color>
+    <color name="black_2">#232323</color>
     <color name="gray">#FF808080</color>
     <color name="white">#FFFFFFFF</color>
     <color name="yellow">#FFC107</color>
