--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,7 +1,8 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Base.Theme.MovieHub" parent="Theme.Material3.Light">
-        <!-- Customize your light theme here. -->
+    <style name="Base.Theme.MovieHub" parent="Theme.Material3.Dark">
+        <!-- Customize your dark theme here. -->
+        <item name="colorPrimary">@color/black</item>
         <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
     </style>
 
