--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -12,19 +12,20 @@
         android:layout_height="wrap_content"
         android:background="@color/black"
         android:elevation="0dp"
+        android:gravity="center"
         android:orientation="vertical">
 
         <LinearLayout
+            android:id="@+id/container"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@color/black"
+            android:visibility="gone"
             android:elevation="0dp"
-            android:gravity="center"
             android:layout_marginBottom="20dp"
             android:orientation="vertical">
 
             <RelativeLayout
-                android:id="@+id/container"
                 android:visibility="visible"
                 android:layout_width="match_parent"
                 android:elevation="0dp"
@@ -221,17 +222,16 @@
             android:id="@+id/progress_bar"
             android:visibility="gone"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="700dp"
             android:layout_marginTop="32dp"/>
 
         <LinearLayout
             android:id="@+id/refresh_container"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="600dp"
             android:gravity="center"
             android:orientation="vertical"
-            android:paddingTop="32dp"
-            android:visibility="gone">
+            android:visibility="visible">
 
             <TextView
                 android:layout_width="wrap_content"
@@ -249,6 +249,5 @@
         </LinearLayout>
 
     </LinearLayout>
-
 
 </ScrollView>
