--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -21,19 +21,10 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"/>
 
-        <ProgressBar
-            android:id="@+id/progress_bar"
-            android:visibility="gone"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="32dp"
-            android:layout_gravity="center"/>
-
         <LinearLayout
-            android:id="@+id/container"
+            android:id="@+id/refresh_container"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:paddingTop="32dp"
             android:gravity="center"
             android:orientation="vertical">
 
